@@ -2,99 +2,100 @@ package com.cine.demo.service.impl;
 
 import com.cine.demo.dto.request.MerchandiseRequestDTO;
 import com.cine.demo.dto.response.MerchandiseResponseDTO;
+import com.cine.demo.exception.ResourceNotFoundException;
+import com.cine.demo.mapper.MerchandiseMapper;
 import com.cine.demo.model.Merchandise;
-import com.cine.demo.model.enums.MerchandiseCategory;
 import com.cine.demo.repository.MerchandiseRepository;
+import com.cine.demo.service.CloudinaryService;
 import com.cine.demo.service.MerchandiseService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-
-import java.time.LocalDateTime;
+import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.multipart.MultipartFile;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class MerchandiseServiceImpl implements MerchandiseService {
 
     private final MerchandiseRepository merchandiseRepository;
-
-    @Override
-    public List<MerchandiseResponseDTO> findAll() {
-        return merchandiseRepository.findAll().stream()
-                .map(this::toDTO)
-                .collect(Collectors.toList());
-    }
+    private final MerchandiseMapper merchandiseMapper;
+    private final CloudinaryService cloudinaryService;
 
     @Override
     public List<MerchandiseResponseDTO> findActive() {
         return merchandiseRepository.findByActiveTrue().stream()
-                .map(this::toDTO)
-                .collect(Collectors.toList());
+                .map(merchandiseMapper::toResponseDto)
+                .toList();
+    }
+
+    @Override
+    public List<MerchandiseResponseDTO> findAll() {
+        return merchandiseRepository.findAll().stream()
+                .map(merchandiseMapper::toResponseDto)
+                .toList();
     }
 
     @Override
     public MerchandiseResponseDTO findById(Long id) {
-        Merchandise merchandise = merchandiseRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Merchandise not found"));
-        return toDTO(merchandise);
+        return merchandiseMapper.toResponseDto(findOrThrow(id));
     }
 
     @Override
+    @Transactional
     public MerchandiseResponseDTO save(MerchandiseRequestDTO dto) {
-        Merchandise merchandise = Merchandise.builder()
-                .name(dto.getName())
-                .description(dto.getDescription())
-                .category(dto.getCategory())
-                .price(dto.getPrice())
-                .stock(dto.getStock())
-                .minStock(dto.getMinStock())
-                .supplier(dto.getSupplier())
-                .imageUrl(dto.getImageUrl())
-                .active(true)
-                .createdAt(LocalDateTime.now())
-                .build();
-        merchandise = merchandiseRepository.save(merchandise);
-        return toDTO(merchandise);
+        return save(dto, null);
     }
 
     @Override
+    @Transactional
+    public MerchandiseResponseDTO save(MerchandiseRequestDTO dto, MultipartFile file) {
+        Merchandise entity = merchandiseMapper.toEntity(dto);
+        Merchandise saved = merchandiseRepository.save(entity);
+        if (file != null && !file.isEmpty()) {
+            saved.setImageUrl(cloudinaryService.uploadImage(file, "merchandise"));
+            saved = merchandiseRepository.save(saved);
+        }
+        return merchandiseMapper.toResponseDto(saved);
+    }
+
+    @Override
+    @Transactional
     public MerchandiseResponseDTO update(Long id, MerchandiseRequestDTO dto) {
-        Merchandise merchandise = merchandiseRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Merchandise not found"));
-        merchandise.setName(dto.getName());
-        merchandise.setDescription(dto.getDescription());
-        merchandise.setCategory(dto.getCategory());
-        merchandise.setPrice(dto.getPrice());
-        merchandise.setStock(dto.getStock());
-        merchandise.setMinStock(dto.getMinStock());
-        merchandise.setSupplier(dto.getSupplier());
-        merchandise.setImageUrl(dto.getImageUrl());
-        merchandise = merchandiseRepository.save(merchandise);
-        return toDTO(merchandise);
+        return update(id, dto, null);
     }
 
     @Override
-    public void delete(Long id) {
-        Merchandise merchandise = merchandiseRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Merchandise not found"));
-        merchandise.setActive(false);
-        merchandiseRepository.save(merchandise);
+    @Transactional
+    public MerchandiseResponseDTO update(Long id, MerchandiseRequestDTO dto, MultipartFile file) {
+        Merchandise entity = findOrThrow(id);
+        merchandiseMapper.updateEntityFromDto(dto, entity);
+        if (file != null && !file.isEmpty()) {
+            entity.setImageUrl(cloudinaryService.uploadImage(file, "merchandise"));
+        }
+        return merchandiseMapper.toResponseDto(merchandiseRepository.save(entity));
     }
 
-    private MerchandiseResponseDTO toDTO(Merchandise merchandise) {
-        return MerchandiseResponseDTO.builder()
-                .id(merchandise.getId())
-                .name(merchandise.getName())
-                .description(merchandise.getDescription())
-                .category(merchandise.getCategory())
-                .price(merchandise.getPrice())
-                .stock(merchandise.getStock())
-                .minStock(merchandise.getMinStock())
-                .supplier(merchandise.getSupplier())
-                .imageUrl(merchandise.getImageUrl())
-                .active(merchandise.getActive())
-                .createdAt(merchandise.getCreatedAt())
-                .build();
+    @Override
+    @Transactional
+    public MerchandiseResponseDTO uploadImage(Long id, MultipartFile file) {
+        Merchandise entity = findOrThrow(id);
+        entity.setImageUrl(cloudinaryService.uploadImage(file, "merchandise"));
+        return merchandiseMapper.toResponseDto(merchandiseRepository.save(entity));
+    }
+
+    @Override
+    @Transactional
+    public void delete(Long id) {
+        if (!merchandiseRepository.existsById(id)) {
+            throw new ResourceNotFoundException("Item not found with id: " + id);
+        }
+        merchandiseRepository.deleteById(id);
+    }
+
+    private Merchandise findOrThrow(Long id) {
+        return merchandiseRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Item not found with id: " + id));
     }
 }
